--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ requires = ["setuptools>=68.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-where = ["src"]
+where = ["."]
+include = ["core*", "models*", "schemas*", "repositories*", "services*", "controllers*"]
 
 [tool.black]
 line-length = 100
