feature: nova interface criada

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
-MP_PUBLIC_KEY=your_public_key_here
-MP_ACCESS_TOKEN=your_access_token_here
+DATABASE_URL=postgresql://user:password@host/database?sslmode=require
+SECRET_KEY=your-secret-key-here
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
-DATABASE_URL=postgresql+asyncpg://user:password@host:5432/database
+# Mercado Pago
+MP_ACCESS_TOKEN=your_mercadopago_access_token
+MP_PUBLIC_KEY=your_mercadopago_public_key
+
+# App
+APP_NAME=Aprova Facil
+FRONTEND_URL=https://your-frontend-url.vercel.app
