--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-fastapi>=0.104.1
-uvicorn[standard]>=0.24.0
-mercadopago>=2.2.1
-python-dotenv>=1.0.0
-pydantic[email]>=2.5.2
-pydantic-settings>=2.1.0
-httpx>=0.25.2
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+sqlalchemy>=2.0.25
+psycopg[binary]>=3.1.18
+python-jose[cryptography]>=3.3.0
+bcrypt>=4.0.0
 python-multipart>=0.0.6
-sqlalchemy>=2.0.23
-asyncpg>=0.29.0
-psycopg2-binary>=2.9.9
+pydantic[email]>=2.5.3
+pydantic-settings>=2.1.0
+mercadopago>=2.2.1
+httpx>=0.26.0
+python-dotenv>=1.0.0
